--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,19 +78,15 @@ dependencies {
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.5"
 
 
-    implementation 'androidx.databinding:databinding-runtime:8.1.1'
 
+    implementation 'androidx.databinding:databinding-runtime:8.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-
     implementation 'androidx.palette:palette:1.0.0'
-
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
-
-    def lottieVersion = "3.4.0"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "io.coil-kt:coil-compose:1.4.0"
 
 }
 kapt {
