--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation  'androidx.compose.material:material:1.4.3'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.7.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -76,7 +77,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.5"
-
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
 
 
     implementation 'androidx.databinding:databinding-runtime:8.1.1'
