--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,9 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:2.44")
     implementation "io.coil-kt:coil-compose:1.4.0"
 
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
+
+
 }
 kapt {
     correctErrorTypes = true
